--- a/package.json
+++ b/package.json
@@ -27,9 +27,14 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "add": "^2.0.6",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
