--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "add": "^2.0.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
